// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when fullscreen 1`] = `
<Button
  dataTest="dhis2-uicore-button"
  secondary={true}
  small={true}
  type="button"
>
  <ExitFullscreen />
</Button>
`;

exports[`renders correctly when not fullscreen 1`] = `
<Fragment>
  <div>
    <Button
      dataTest="dashboarditem-menu-button"
      onClick={[Function]}
      secondary={true}
      small={true}
      type="button"
    >
      <ThreeDots />
    </Button>
  </div>
</Fragment>
`;
